Initial post requirements text

--- a/output/authors.html
+++ b/output/authors.html
@@ -11,12 +11,16 @@
         <header id="banner" class="body">
                 <h1><a href="/">Tony Spiker's home</a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
+                    <li><a href="/category/wrestling-shit.html">wrestling shit</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Tony Spiker's home</h1>
     <ul>
+        <li><a href="/author/spiker.html">Spiker</a> (1)</li>
+        <li><a href="/author/tony-spiker.html">Tony Spiker</a> (1)</li>
     </ul>
 </section>
 
