--- a/output/archives.html
+++ b/output/archives.html
@@ -11,12 +11,18 @@
         <header id="banner" class="body">
                 <h1><a href="/">Tony Spiker's home</a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
+                    <li><a href="/category/wrestling-shit.html">wrestling shit</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Tony Spiker's home</h1>
 
 <dl>
+    <dt>Tue 29 December 2020</dt>
+    <dd><a href="/hello-world.html">"Hello World!"</a></dd>
+    <dt>Wed 07 October 2020</dt>
+    <dd><a href="/new.html">new</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
