--- a/output/categories.html
+++ b/output/categories.html
@@ -11,10 +11,14 @@
         <header id="banner" class="body">
                 <h1><a href="/">Tony Spiker's home</a></h1>
                 <nav><ul>
+                    <li><a href="/category/misc.html">misc</a></li>
+                    <li><a href="/category/wrestling-shit.html">wrestling shit</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on Tony Spiker's home</h1>
     <ul>
+        <li><a href="/category/misc.html">misc</a> (1)</li>
+        <li><a href="/category/wrestling-shit.html">wrestling shit</a> (1)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
