--- a/output/archives.html
+++ b/output/archives.html
@@ -20,6 +20,8 @@
 
 <dl>
     <dt>Tue 29 December 2020</dt>
+    <dd><a href="https://www.tonyspiker.com/the-journey-so-far.html">"The journey so far"</a></dd>
+    <dt>Mon 28 December 2020</dt>
     <dd><a href="https://www.tonyspiker.com/hello-world.html">"Hello World!"</a></dd>
     <dt>Wed 07 October 2020</dt>
     <dd><a href="https://www.tonyspiker.com/new.html">new</a></dd>
