--- a/output/categories.html
+++ b/output/categories.html
@@ -48,7 +48,7 @@ Released   : 20100928
 					</div>
 					<ul>
 						<li>
-							<h2>Catégories</h2>
+							<h2>Categories</h2>
 							<ul>
 								 <li ><a href="https://www.tonyspiker.com/category/misc.html">misc</a></li>
 								 <li ><a href="https://www.tonyspiker.com/category/wrestling-shit.html">wrestling shit</a></li>
