--- a/output/linear-algebra-and-thoughts-on-rigor.html
+++ b/output/linear-algebra-and-thoughts-on-rigor.html
@@ -40,10 +40,10 @@ Released   : 20100928
 <p><strong> <a href="https://textbooks.math.gatech.edu/ila/index2.html">https://textbooks.math.gatech.edu/ila/index2.html</a> </strong></p>
 <p>One hint that John passed on to be through his education trials, was: Anytime a text says, it can be easiely shown that...  Go ahead and show it.  This textbook has plenty of opportunities to do so.  Today I did about 1/3 of the first of 4 linear algebra classes.  Judging by the book, that take me to about chapter 2.3 in the text.  So, tomorrow, I am going to "show" all the things that can be easily shown.  In otherwords, I am going to do all the examples in the book to supply the rigor that the 800 dollar fee was supposed to provide.</p>
 <p>Update:  Found some more problem sets that I am going to share, that is if you are interested in learning linear algebra on your own as well</p>
-<p>There is this one from UC Davis:
-<strong> <a href="https://www.math.ucdavis.edu/~linear/problem_sets.pdf">https://www.math.ucdavis.edu/~linear/problem_sets.pdf</a> </strong></p>
-<p>And this one from MIT:</p>
-<p><strong> <a href="http://web.mit.edu/18.06/www/Spring02/probsets/">http://web.mit.edu/18.06/www/Spring02/probsets/</a> </strong>pel</p>	
+<p><strong> There is this one from UC Davis: </strong></p>
+<p><strong> <a href="https://www.math.ucdavis.edu/~linear/problem_sets.pdf">https://www.math.ucdavis.edu/~linear/problem_sets.pdf</a> </strong></p>
+<p><strong> And this one from MIT: </strong></p>
+<p><strong> <a href="http://web.mit.edu/18.06/www/Spring02/probsets/">http://web.mit.edu/18.06/www/Spring02/probsets/</a> </strong></p>	
 						</div>
 					</div>
 			      
